{
    "name": "NX Input Actions",
    "maps": [
        {
            "name": "NX_Player",
            "id": "c1d352ea-3a82-4e5b-88e3-4690eb22338c",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "dfa19f04-ae3d-4487-ac22-b3125f842098",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "52759188-2b2a-4bdb-9903-caf03fb7acce",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "f9d87b3f-23a6-4355-ac4c-11151ff44ccc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "c702373d-1630-4e73-b0ad-2f25d96eb8ba",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Option",
                    "type": "Button",
                    "id": "bbf1fcda-bbf9-4b18-afa9-e84bb2e0646f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CustomAnim0",
                    "type": "Button",
                    "id": "817b08a8-1042-4913-b1da-d64f21d7c212",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CustomAnim1",
                    "type": "Button",
                    "id": "348bd3db-d807-4fab-b2c7-4928ae29efab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CustomAnim2",
                    "type": "Button",
                    "id": "946b57c7-d543-4078-b4ca-198a37353687",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CustomAnim3",
                    "type": "Button",
                    "id": "a1b3c550-a3a8-49af-aacc-a6dc42e46c2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CustomAnim4",
                    "type": "Button",
                    "id": "d8bbdc56-1b86-4256-b346-bbfe98653e34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24b6514f-9f96-4454-a8ea-a92fa3c622d9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d15ceebb-b36d-405a-81de-079f507dfe1f",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "XRI",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0683212-f82d-426d-9bc2-1c7c1a9113e1",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "XRI",
                    "action": "Activate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68b9c59a-b550-4217-9c74-1acad1880926",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f0a3eec-3bf1-4826-84af-acecc4b9f79b",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "XRI",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d89993a-87b4-41f8-a6c4-0a7acf72d2e9",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "a8db5c53-67db-4f5a-93f2-343396290ecb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "428a0e6d-1ea4-4fff-b5dc-35af3cfef926",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "decc8be5-cd9d-4a72-8e98-d5eebfe32839",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8c3defc7-14d1-427e-8379-87e600302f92",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "142ac301-eded-47b7-9edd-65e170f27723",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "0a9032a4-01d9-49c9-9c55-212eca0a1de2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fa210f43-ea42-48aa-b8d8-a59b207a8064",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "XRI",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "12714d3d-f4c6-439e-adb4-c3f85e28ae8b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c7385896-44b5-45d8-9dd6-80f9ef0f272a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b4c75c85-293e-46b5-9d26-24a72173ac59",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f8e11ce3-7a31-44c2-857b-facc4eadaaf6",
                    "path": "<XRController>{LeftHand}/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "XRI",
                    "action": "Option",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02a54d32-28d3-46d4-9170-d50b2cb7782c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "CustomAnim0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34df8831-a570-462b-afea-3be2ac24426f",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "CustomAnim1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b377a326-ab53-4b62-9da7-121a1c8b3fe5",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "CustomAnim2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "577de974-d151-47b4-a348-4b2b83908679",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "CustomAnim3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "240eae2b-a5d3-4020-8ca0-f38abe0ae0c5",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "CustomAnim4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XRI",
            "bindingGroup": "XRI",
            "devices": [
                {
                    "devicePath": "<XRController>{LeftHand}",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<XRController>{RightHand}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}